# Email-Auto-Agent

./: .env  README.md  pyproject.toml  respond.md  token.json
src/email_auto_agent/: crew.py  main.py
src/email_auto_agent/config/: agents.yaml  tasks.yaml
src/email_auto_agent/tools/: emails_tool.py
src/email_auto_agent/utils/: email_filter.py  gmail_service.py
